--- a/pages/rolls.html
+++ b/pages/rolls.html
@@ -131,7 +131,7 @@
                     <div class="salsa_wasabi"> <pre> <b>Salsa extra</b>  <b>Wasabi extra</b> </pre> </div>
                     <div class="precio2"> <pre> $150 - $130 </pre> </div>
                     <div class="imagen_rol">
-                    <img src="/imagenes/roles1.jpg" alt="roles">
+                    <img src="../imagenes/roles1.jpg" alt="roles">
                     </div>
                 </div>
             </section>
