--- a/pages/sushi.html
+++ b/pages/sushi.html
@@ -51,7 +51,7 @@
         <section class="menu-main">
             <div class="menu-carta">
                 <div class="menu-titulo">
-                <h2 class="animate__animated animate__flip">Sushi Bowls</h2>
+                <h2 class="animate__animated animate__backInLeft">Sushi Bowls</h2>
                 </div>
                 <div class="bowl-menu">
                     <div id="kani"> <b>Kanikama,</b> arroz de sushi, palta, verdeo, sésamo y phila.</div>
@@ -60,14 +60,14 @@
                     <div id="plango" class="precio">$1550</div>
                     <div id="salmon"> <b>Salmón fresco o apanado,</b> arroz de sushi, palta, verdeo, sésamo y phila.</div>
                     <div id="psalmon" class="precio">$1650</div>
-                    <div id="temp"> <b>Tempura Bowl,</b> pescado blanco frito en tempura, criolla condimentada con cilantro y arroz blanco.</div>
+                    <div id="temp"> <b>Tempura Bowl,</b> pescado blanco frito en tempura, criolla con cilantro y arroz blanco.</div>
                     <div id="ptemp" class="precio">$1550</div>
                     <div id="veggie"> <b>Sushi Bowl Veggie</b> </div>
                     <div id="pveggie" class="precio">$1400</div>
                     <div id="ing"> <b>🥑Ingrediente Adicional:</b><span class="precio">$250</span></div>
                 </div>
                 <div class="sushi_imagen" >
-                    <img src="/imagenes/fondo sushi.jpg" alt="sushi" class="animate__animated animate__zoomInDown" >
+                    <img src="../imagenes/fondo sushi.jpg" alt="sushi" class="animate__animated animate__zoomInDown" >
                 </div>
             </div>
         </section>
@@ -75,7 +75,7 @@
     <section class="menu-main">
         <div class="menu-carta" >
             <div class="menu-titulo"> 
-                <div><h2 class="animate__animated animate__flip">Sushi</h2></div>
+                <div><h2 class="animate__animated animate__backInLeft">Sushi</h2></div>
             </div>
             <div class="sushi_borde" id="sushi_espacio">
                 <div class="sushi_menu"><!--Combi 4variedades-->
@@ -94,7 +94,7 @@
                     <div id="p2">🥑 <b>Piezas a elección de la Sushiwoman.</b> </div>
                 </div>
                 <div class="only_salmon"><!--Combi Only Salmon-->
-                    <div id="only"><h3><b>Combi Only Salmon</b></h3></div>
+                    <h3 id="only"><b>Combi Only Salmon</b></h3>
                     <div id="on12"><pre><b class="cantidad">x12</b><b>   2 geishas, 2 nigiris, 2 tamagos, 
                     2 sashimis y 4 piezas roll.</b> </pre> </div>
                     <div id="on12p" class="precio">$2750</div>
@@ -121,7 +121,7 @@
                     <div id="pvegp" class="precio">$1900</div>
                 </div>
                 <div class="degust"><!--Combi Degustación-->
-                    <div id="d6"><h3><pre><b>Degustación</b> <b>x6</b></pre></h3></div>
+                    <h3 id="d6"><pre><b>Degustación</b> <b>x6</b></pre></h3>
                     <div id="p6" class="precio">$1600</div>
                     <div id="d6p"><b>🥑Piezas a elección de la Sushiwoman</b> </div>
                 </div>    
