--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -76,15 +76,15 @@
                 </div>
         </section>
         <section class="menu-main">
-            <div class="menu-carta">
-                <div class="menu-titulo">
+            <div class="menu-carta" >
+                <div class="menu-titulo" id="contacto-kanpeki">
                     <h2 class="animate__animated animate__tada"> Somos Kanpeki 🥢</h2>
                 </div>
                 <div>
-                    <div class="fb-page" data-href="https://www.facebook.com/Kanpeki.Sushi.AsianFood" data-tabs="timeline" data-width="500px" data-height="70px" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/Kanpeki.Sushi.AsianFood" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/Kanpeki.Sushi.AsianFood">Kanpeki. Sushi &amp; Asian Food</a></blockquote></div>
+                    <div class="fb-page" data-href="https://www.facebook.com/Kanpeki.Sushi.AsianFood" data-tabs="timeline" data-width="270px" data-height="70px" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/Kanpeki.Sushi.AsianFood" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/Kanpeki.Sushi.AsianFood">Kanpeki. Sushi &amp; Asian Food</a></blockquote></div>
                 </div>
                     <div id="mapa">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13508.809731861107!2d-64.11233615!3d-32.1718155!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95cd6f36ca7b093f%3A0x5597139df2532088!2sKanpeki%20Sushi%20y%20Asian%20Food!5e0!3m2!1ses!2sar!4v1675884346959!5m2!1ses!2sar" width="420" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13508.809731861107!2d-64.11233615!3d-32.1718155!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95cd6f36ca7b093f%3A0x5597139df2532088!2sKanpeki%20Sushi%20y%20Asian%20Food!5e0!3m2!1ses!2sar!4v1675884346959!5m2!1ses!2sar" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
         </section>
