--- a/pages/sushi.html
+++ b/pages/sushi.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="sushi, combinados, only salmon, premium, roles, veggie, sushi veggie">
     <meta name="author" content="Mauricio Maldonado">
     <meta name="copyright" content="kanpeki.sushi">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
@@ -60,16 +61,40 @@
                     <div id="plango" class="precio">$1550</div>
                     <div id="salmon"> <b>Salmón fresco o apanado,</b> arroz de sushi, palta, verdeo, sésamo y phila.</div>
                     <div id="psalmon" class="precio">$1650</div>
-                    <div id="temp"> <b>Tempura Bowl,</b> pescado blanco frito en tempura, criolla con cilantro y arroz blanco.</div>
-                    <div id="ptemp" class="precio">$1550</div>
                     <div id="veggie"> <b>Sushi Bowl Veggie</b> </div>
                     <div id="pveggie" class="precio">$1400</div>
                     <div id="ing"> <b>🥑Ingrediente Adicional:</b><span class="precio">$250</span></div>
                 </div>
-                <div class="sushi_imagen" >
-                    <img src="../imagenes/fondo sushi.jpg" alt="sushi" class="animate__animated animate__zoomInDown" >
+                <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="../imagenes/sushi/sushi1.jpg" class="d-block w-100" alt="sushi1">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="../imagenes/sushi/sushi2.jpg" class="d-block w-100" alt="sushi2">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="../imagenes/sushi/sushi3.jpg" class="d-block w-100" alt="sushi3">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="../imagenes/sushi/sushi4.jpg" class="d-block w-100" alt="sushi4">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="../imagenes/sushi/sushi5.jpg" class="d-block w-100" alt="sushi5">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="../imagenes/sushi/sushi6.jpg" class="d-block w-100" alt="sushi6">
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleSlidesOnly" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleSlidesOnly" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
                 </div>
-            </div>
         </section>
 
     <section class="menu-main">
@@ -146,6 +171,8 @@
         </div>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
