--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -53,7 +53,7 @@
         <section class="menu-main">
             <div class="menu-carta">
                 <div class="menu-titulo" id="conocenos">
-                    <h2 class="animate__animated animate__tada">Conocenos...</h2>
+                    <h2 class="animate__animated animate__backInLeft">Conocenos...</h2>
                 </div>
             </div>
             <div>
@@ -78,7 +78,7 @@
         <section class="menu-main">
             <div class="menu-carta" >
                 <div class="menu-titulo" id="contacto-kanpeki">
-                    <h2 class="animate__animated animate__tada"> Somos Kanpeki 🥢</h2>
+                    <h2 class="animate__animated animate__backInLeft"> Somos Kanpeki 🥢</h2>
                 </div>
                 <div>
                     <div class="fb-page" data-href="https://www.facebook.com/Kanpeki.Sushi.AsianFood" data-tabs="timeline" data-width="270px" data-height="70px" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/Kanpeki.Sushi.AsianFood" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/Kanpeki.Sushi.AsianFood">Kanpeki. Sushi &amp; Asian Food</a></blockquote></div>
